--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Joulupukkipomppii.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Joulupukkipomppii.data.br",
-        frameworkUrl: buildUrl + "/Joulupukkipomppii.framework.js.br",
-        codeUrl: buildUrl + "/Joulupukkipomppii.wasm.br",
+        dataUrl: buildUrl + "/Joulupukkipomppii.data",
+        frameworkUrl: buildUrl + "/Joulupukkipomppii.framework.js",
+        codeUrl: buildUrl + "/Joulupukkipomppii.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Buble",
